--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.10",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "eslint": "8.7.0",
