--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/node": "^17.0.10",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.25.0",
     "next": "12.0.8",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "typescript": "^4.5.4"
