--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.25.0",
+    "jwt-decode": "^3.1.2",
     "next": "12.0.8",
     "nookies": "^2.5.2",
     "react": "17.0.2",
